Se agregó funcionalidad de eliminar usuario y perfil medianteevento
