# perfil.go
@@ -39,6 +39,11 @@ type PerfilUsuario struct {
 	RedesSociales  []string `json:"redes_sociales"`
 }
 
+// @title Servicio de Gestión de Perfiles API
+// @version 1
+// @description Esta es una muestra de servidor PerfilUsuario.
+// @host localhost:3002
+// @BasePath /
 func main() {
 	var err error
 
@@ -62,13 +67,19 @@ func main() {
 	}
 
 	r := gin.Default()
+	// r.Static("/docs", "./docs")
+	// r.GET("/swagger/swagger.json", func(c *gin.Context) {
+	// 	c.File("./docs/swagger.json")
+	// })
+
+	// url := ginSwagger.URL("http://localhost:3002/swagger/swagger.json")
+	// r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
+
 	go escucharEventosRegistro()
 
 	r.GET("/perfil/:id", obtenerPerfil)
 	r.PUT("/perfil/:id", actualizarPerfil)
 	r.GET("/perfiles", listarPerfiles)
-
-	// Añade aquí las nuevas rutas para el reto
 	r.GET("/health", healthCheck)
 	r.GET("/health/ready", healthReady)
 	r.GET("/health/live", healthLive)
@@ -94,6 +105,14 @@ func crearTablaPerfiles() error {
 	return err
 }
 
+// @Summary Obtener un perfil de usuario
+// @Description obtiene el perfil de usuario por ID
+// @ID obtener-perfil
+// @Accept  json
+// @Produce  json
+// @Param id path int true "ID del Usuario"
+// @Success 200 {object} PerfilUsuario
+// @Router /perfil/{id} [get]
 func obtenerPerfil(c *gin.Context) {
 	userID := c.Param("id")
 
@@ -125,6 +144,15 @@ func obtenerPerfil(c *gin.Context) {
 	c.JSON(http.StatusOK, perfilUsuario)
 }
 
+// ListarPerfiles lista todos los perfiles de usuario
+// @Summary Lista todos los perfiles de usuario
+// @Description Devuelve un arreglo de todos los perfiles de usuario
+// @Tags perfiles
+// @Accept json
+// @Produce json
+// @Success 200 {array} PerfilUsuario
+// @Failure 500 {object} HTTPError "Error al recuperar los perfiles"
+// @Router /perfiles [get]
 func listarPerfiles(c *gin.Context) {
 	// Realiza una consulta SQL para obtener todos los perfiles
 	query := "SELECT id, url_personal, apodo, info_contacto, direccion, biografia, organizacion, pais_residencia, redes_sociales FROM perfiles_usuarios"
@@ -157,7 +185,7 @@ func listarPerfiles(c *gin.Context) {
 		perfiles = append(perfiles, perfilUsuario)
 	}
 	// Registrar la operación en el sistema de logs
-	registrarInvocacion("Perfil", "Listado", "Perfil", "Perfiles listados", "Se ha realizado un listado de todos los perfiles")
+	//registrarInvocacion("Perfil", "Listado", "Perfil", "Perfiles listados", "Se ha realizado un listado de todos los perfiles")
 
 	c.JSON(http.StatusOK, perfiles)
 }
@@ -206,7 +234,6 @@ func escucharEventosRegistro() {
 		}
 
 		// Asignar el ID del usuario al perfil y crear un perfil predeterminado
-
 		if evento["type"] == "USER_REGISTERED" {
 			fmt.Printf("Evento recibido: %+v\n", evento)
 
@@ -223,10 +250,44 @@ func escucharEventosRegistro() {
 				log.Printf("userId es nil o no existe en el evento")
 			}
 		}
+		if evento["type"] == "USER_DELETED" {
+			// Manejar la eliminación del perfil asociado al usuario
+			if userId, ok := evento["userId"]; ok && userId != nil {
+				fmt.Printf("Tipo de userId antes de la conversión: %T\n", userId)
+				if userIdStr, ok := userId.(string); ok {
+					// Convertir el userId de string a int
+					userIdInt, err := strconv.Atoi(userIdStr)
+					if err != nil {
+						log.Printf("Error al convertir userId a int: %v", err)
+						continue // Salir del bucle actual y esperar el siguiente mensaje
+					}
+					eliminarPerfil(userIdInt)
+				} else {
+					log.Printf("Error: userId no es un string: %v", userId)
+				}
+			} else {
+				log.Printf("userId es nil o no existe en el evento")
+			}
+		}
 
 	}
 }
 
+// ActualizarPerfil actualiza el perfil de un usuario
+// @Summary Actualizar un perfil de usuario
+// @Description Actualiza los datos del perfil de usuario basándose en el id proporcionado
+// @Tags perfil
+// @Accept json
+// @Produce json
+// @Param Authorization header string true "Token de autenticación"
+// @Param id path int true "ID del Usuario"
+// @Param perfil body PerfilUsuario true "Datos del perfil a actualizar"
+// @Success 200 {object} HTTPSuccess "Perfil actualizado con éxito"
+// @Failure 400 {object} HTTPError "Datos de perfil no válidos"
+// @Failure 401 {object} HTTPError "Token no válido"
+// @Failure 403 {object} HTTPError "No tienes permiso para actualizar este perfil"
+// @Failure 500 {object} HTTPError "Error al actualizar el perfil"
+// @Router /perfil/{id} [put]
 func actualizarPerfil(c *gin.Context) {
 	// Obtener el token de la cabecera Authorization
 	tokenString := c.GetHeader("Authorization")
@@ -334,6 +395,18 @@ func crearPerfilPredeterminado(id int) {
 
 }
 
+func eliminarPerfil(userID int) {
+	query := "DELETE FROM perfiles_usuarios WHERE id = ?"
+	_, err := db.Exec(query, userID)
+	if err != nil {
+		log.Printf("Error al eliminar el perfil del usuario %d: %v", userID, err)
+		return
+	}
+
+	mensaje := fmt.Sprintf("Perfil del usuario %d eliminado con éxito", userID)
+	registrarInvocacion("Perfil", "Eliminación Perfil", "Perfil", "Perfil eliminado", mensaje)
+}
+
 func validarToken(tokenString string) (*jwt.Token, error) {
 	token, err := jwt.Parse(tokenString, func(token *jwt.Token) (interface{}, error) {
 		if _, ok := token.Method.(*jwt.SigningMethodHMAC); !ok {
@@ -363,11 +436,27 @@ func validarToken(tokenString string) (*jwt.Token, error) {
 }
 
 // Health Check general
+
+// HealthCheck informa el estado general del servicio
+// @Summary Verificar el estado general del servicio
+// @Description Indica si el servicio está arriba sin verificar dependencias
+// @Tags salud
+// @Produce json
+// @Success 200 {object} HealthStatus "Servicio en funcionamiento"
+// @Router /health [get]
 func healthCheck(c *gin.Context) {
 	c.JSON(http.StatusOK, gin.H{"status": "UP"})
 }
 
 // Health Check de readiness
+// HealthReady verifica la preparación del servicio para manejar tráfico
+// @Summary Verificar el estado de readiness del servicio
+// @Description Verifica si las dependencias del servicio están listas para manejar tráfico
+// @Tags salud
+// @Produce json
+// @Success 200 {object} HealthStatus "Servicio listo para manejar tráfico"
+// @Failure 500 {object} HealthStatus "Servicio no está listo para manejar tráfico"
+// @Router /health/ready [get]
 func healthReady(c *gin.Context) {
 	// Verificar la conexión a la base de datos
 	if err := db.Ping(); err != nil {
@@ -386,7 +475,31 @@ func healthReady(c *gin.Context) {
 }
 
 // Health Check de liveness
+
+// HealthLive verifica si el servicio está vivo
+// @Summary Verificar el estado de liveness del servicio
+// @Description Indica si el servicio está vivo y corriendo
+// @Tags salud
+// @Produce json
+// @Success 200 {object} HealthStatus "Servicio vivo y corriendo"
+// @Router /health/live [get]
 func healthLive(c *gin.Context) {
 	// Aquí simplemente devuelves que el servicio está vivo
 	c.JSON(http.StatusOK, gin.H{"status": "ALIVE"})
+}
+
+// HealthStatus es el esquema común para los estados de salud
+type HealthStatus struct {
+	Status string `json:"status"`
+	Error  string `json:"error,omitempty"`
+}
+
+// HTTPError representa un error de la API
+type HTTPError struct {
+	Error string `json:"error"`
+}
+
+// HTTPSuccess representa una respuesta exitosa
+type HTTPSuccess struct {
+	Message string `json:"message"`
 }
